--- a/home.html
+++ b/home.html
@@ -21,14 +21,14 @@
 
 <section class="header">
 
-   <a href="home.php" class="logo">Wedding salon.</a>
+   <a href="home.html" class="logo">Wedding salon.</a>
 
    <nav class="navbar">
-      <a href="home.php">home</a>
-      <a href="about.php">about</a>
-      <a href="portfolio.php">portfolio</a>
-      <a href="pricing.php">pricing</a>
-      <a href="contact.php">contact</a>
+      <a href="home.html">home</a>
+      <a href="about.html">about</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="pricing.html">pricing</a>
+      <a href="contact.html">contact</a>
    </nav>
 
    <div id="menu-btn" class="fas fa-bars"></div>
@@ -45,7 +45,7 @@
             <div class="content">
                <h3>plan your wedding!</h3>
                <p>Plan weddings with us for any date and with any number of guests. We guarantee quality!</p>
-               <a href="about.php" class="btn">discover more</a>
+               <a href="about.html" class="btn">discover more</a>
             </div>
          </div>
 
@@ -70,7 +70,7 @@
             <div class="content">
                <h3>photography</h3>
                <p>The best photographer will take the best photos for memory!</p>
-               <a href="about.php" class="btn">about us</a>
+               <a href="about.html" class="btn">about us</a>
             </div>
          </div>
 
@@ -79,7 +79,7 @@
             <div class="content">
                <h3>wedding registory</h3>
                <p>The most important part of a wedding. Everything will go well!</p>
-               <a href="about.php" class="btn">about us</a>
+               <a href="about.html" class="btn">about us</a>
             </div>
          </div>
 
@@ -88,7 +88,7 @@
             <div class="content">
                <h3>guest list</h3>
                <p>We work with any number of guests. Сall more!</p>
-               <a href="about.php" class="btn">about us</a>
+               <a href="about.html" class="btn">about us</a>
             </div>
          </div>
 
@@ -97,7 +97,7 @@
             <div class="content">
                <h3>wedding cake</h3>
                <p>We work with the best confectioners in the country. A great cake is guaranteed!</p>
-               <a href="about.php" class="btn">about us</a>
+               <a href="about.html" class="btn">about us</a>
             </div>
          </div>
 
@@ -106,7 +106,7 @@
             <div class="content">
                <h3>wedding ceremony</h3>
                <p>The most touching part of the wedding!</p>
-               <a href="about.php" class="btn">about us</a>
+               <a href="about.html" class="btn">about us</a>
             </div>
          </div>
 
@@ -115,7 +115,7 @@
             <div class="content">
                <h3>fine dining</h3>
                <p>The best chefs of the country will make dinner unforgettable!</p>
-               <a href="about.php" class="btn">about us</a>
+               <a href="about.html" class="btn">about us</a>
             </div>
          </div>
 
