--- a/pricing.html
+++ b/pricing.html
@@ -21,14 +21,14 @@
 
 <section class="header">
 
-   <a href="home.php" class="logo">Wedding salon.</a>
+   <a href="home.html" class="logo">Wedding salon.</a>
 
    <nav class="navbar">
-      <a href="home.php">home</a>
-      <a href="about.php">about</a>
-      <a href="portfolio.php">portfolio</a>
-      <a href="pricing.php">pricing</a>
-      <a href="contact.php">contact</a>
+      <a href="home.html">home</a>
+      <a href="about.html">about</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="pricing.html">pricing</a>
+      <a href="contact.html">contact</a>
    </nav>
 
    <div id="menu-btn" class="fas fa-bars"></div>
@@ -49,7 +49,7 @@
             <p> <i class="fas fa-check"></i> wedding ceromony</p>
             <p> <i class="fas fa-check"></i> guest invitations</p>
          </div>
-         <a href="contact.php" class="btn">choose plan</a>
+         <a href="contact.html" class="btn">choose plan</a>
       </div>
 
       <div class="box">
@@ -61,7 +61,7 @@
             <p> <i class="fas fa-check"></i> meals & drinks</p>
             <p> <i class="fas fa-check"></i> guest invitations</p>
          </div>
-         <a href="contact.php" class="btn">choose plan</a>
+         <a href="contact.html" class="btn">choose plan</a>
       </div>
 
       <div class="box">
@@ -74,7 +74,7 @@
             <p> <i class="fas fa-check"></i> meals & drinks</p>
             <p> <i class="fas fa-check"></i> guest invitations</p>
          </div>
-         <a href="contact.php" class="btn">choose plan</a>
+         <a href="contact.html" class="btn">choose plan</a>
       </div>
 
    </div>
