--- a/about.html
+++ b/about.html
@@ -21,14 +21,14 @@
 
 <section class="header">
 
-   <a href="home.php" class="logo">Wedding salon.</a>
+   <a href="home.html" class="logo">Wedding salon.</a>
 
    <nav class="navbar">
-      <a href="home.php">home</a>
-      <a href="about.php">about</a>
-      <a href="portfolio.php">portfolio</a>
-      <a href="pricing.php">pricing</a>
-      <a href="contact.php">contact</a>
+      <a href="home.html">home</a>
+      <a href="about.html">about</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="pricing.html">pricing</a>
+      <a href="contact.html">contact</a>
    </nav>
 
    <div id="menu-btn" class="fas fa-bars"></div>
@@ -42,7 +42,7 @@
    <p>Our salon provides the highest level of service.
    Cozy atmosphere, impeccable service, exclusive designer wedding gowns, a wide range of
    additional services – things that ensure the uniqueness of our salon.</p>
-   <a href="contact.php" class="btn">contact us</a>
+   <a href="contact.html" class="btn">contact us</a>
 
 </section>
 
