--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,14 @@ if(isset($_POST['send'])){
 
 <section class="header">
 
-   <a href="home.php" class="logo">Wedding salon.</a>
+   <a href="home.html" class="logo">Wedding salon.</a>
 
    <nav class="navbar">
-      <a href="home.php">home</a>
-      <a href="about.php">about</a>
-      <a href="portfolio.php">portfolio</a>
-      <a href="pricing.php">pricing</a>
-      <a href="contact.php">contact</a>
+      <a href="home.html">home</a>
+      <a href="about.html">about</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="pricing.html">pricing</a>
+      <a href="contact.html">contact</a>
    </nav>
 
    <div id="menu-btn" class="fas fa-bars"></div>
